test/1.2/errors/T_EBITRO_2.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
bitorder be;

bank b {
    register r size 4 @ undefined {
        /// ERROR EBITRO
        field f1 [0:3];
        /// ERROR EBITRO
        field f2 [3:3];
    }
}
